Debug John's problem with referenced fields

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
@@ -24,6 +24,7 @@
   #end
 #end
 #foreach($field in $fields)
+  Field $field<br>
   #if($field.getHidden() == false)
     #if(!$firstField && !$field.equals($primaryKey))
       #set($firstField = $field)
