--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
@@ -55,6 +55,7 @@
   	#set($fieldCategory = $field.getFieldCategory())
   	#set($referencedData = "")
   	#if($fieldCategory == "REFERENCED_REPORT_DATA")
+      We have a referenced data field $field<br>
   	  ## Capture the output of the parsing into a variable. We want to know whether a value
   	  ## exists or not for this field so we can choose whether to display the row
   	  #set($referencedData = "#parse('gui/resources/input/referenced_report_data.vm')")
