--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
@@ -59,6 +59,7 @@
   	  ## Capture the output of the parsing into a variable. We want to know whether a value
   	  ## exists or not for this field so we can choose whether to display the row
   	  #set($referencedData = "#parse('gui/resources/input/referenced_report_data.vm')")
+      Referenced data is $referencedData<br>
   	#end
   	#if(($fieldCategory != "REFERENCED_REPORT_DATA") || $referencedData.contains("span"))
   	  #if(($fieldCategory != "FILE") || (!$ab_calendar_display)) ## Don't show file fields in calendar editor for now
