--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
@@ -10,15 +10,15 @@
   <title>$report.getModule() $report</title>
   <link type="text/css" href="resources/pane1_amalgam.css" rel="stylesheet" />
   <link type="text/css" href="resources/pane3_amalgam.css" rel="stylesheet" />
-  <link type="text/css" href="resources/edit_nav/edit_nav.css" rel="stylesheet" />
-  <link type="text/css" href="resources/edit_nav/slides.css" rel="stylesheet" />
+  <link type="text/css" href="resources/preview/edit_nav.css" rel="stylesheet" />
+  <link type="text/css" href="resources/preview/slides.css" rel="stylesheet" />
   <script src="resources/jquery.js" language="Javascript"></script>
   <script src="resources/pane1_amalgam.js" language="Javascript"></script>
   <script src="resources/pane3_amalgam.js" language="Javascript"></script>
-  <script src="resources/edit_nav/edit_nav.js" language="Javascript"></script>
-  <script src="resources/edit_nav/slides.js" language="Javascript"></script>
+  <script src="resources/preview/edit_nav.js" language="Javascript"></script>
+  <script src="resources/preview/slides.js" language="Javascript"></script>
 </head>
-<body style="overflow: hidden"> ## override tabs.css
+<body style="overflow: scroll"> ## override tabs.css
   #set($filterString = $sessionData.getGlobalFilterString($report))
   <div id="navrow">
     #set($placeholder = $report.getReportName().replaceAll(" - .*",""))
