--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -36,6 +36,7 @@ body {
   height: 150px;
   overflow: hidden;
   color: black;
+  position: relative;
   /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
 }
 
@@ -68,6 +69,7 @@ body {
   top: -1em;
   left: -1em;
   right: -1em;
+  position: absolute;
 }
 
 .reportDataView .block.centrebox {
