Debug empty form tabs

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -58,6 +58,7 @@
   </div>
 #end
 #if($field.equals($lastField))
+  This is the last field
   #if($formStyle == 'TWO_COLUMNS')
     </td></tr></table>
   #end
