Debug empty form tabs

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -57,6 +57,7 @@
     #parse('gui/resources/input/input.vm')
   </div>
 #end
+$viewTools.log("Testing field $field == $lastField: $field.equals($lastField)")
 #if($field.equals($lastField))
   This is the last field
   #if($formStyle == 'TWO_COLUMNS')
