Bugfix empty tabs

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -57,19 +57,4 @@
     #parse('gui/resources/input/input.vm')
   </div>
 #end
-$viewTools.log("Testing field $field == $lastField: $field.equals($lastField)")
-#if($field.equals($lastField))
-  This is the last field
-  #if($formStyle == 'TWO_COLUMNS')
-    </td></tr></table>
-  #end
-  </div> <!-- end of last block -->
-  #if($hasSections)
-    </div> <!-- end of two sections container -->
-  #end
-  #foreach($formTab in $formTabs)
-    Tab for $formTab<br/>
-    <div style="display:none; min-height:15em" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
-    </div>
-  #end
-#end
+## Divs / tables are closed in edit_content.vm
