--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
@@ -23,11 +23,26 @@
     #set($lastField = $field)
   #end
 #end
+#set($singleColumn = true) ## will be modified by table_data_row.vm
 #foreach($field in $fields)
   #if($field.getHidden() == false)
     #if(!$firstField && !$field.equals($primaryKey))
       #set($firstField = $field)
     #end
     #parse("gui/reports_and_tables/tabs/table_data_row.vm")
+  #end
+#end
+#if(!$singleColumn)
+    #if($formStyle == 'TWO_COLUMNS')
+    </td></tr></table>
+  #end
+  </div> <!-- end of last block -->
+  #if($hasSections)
+    </div> <!-- end of two sections container -->
+  #end
+  #foreach($formTab in $formTabs)
+    Tab for $formTab<br/>
+    <div style="display:none; min-height:15em" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
+    </div>
   #end
 #end
