Input border styles

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -688,10 +688,7 @@ div#reportData {
 }
 
 #reportData .block select {
-  -webkit-appearance: none;
-  border: 1px solid #dddddd;
-  -moz-appearance: window; /* should be none: see https://bugzilla.mozilla.org/show_bug.cgi?id=649849 */
-  height: 2em /* 1.7em; */
+  /* height: 2em /* 1.7em; */
 }
 
 #reportData .block select:hover {
