File field flow bug

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -750,6 +750,7 @@ div#reportData {
 #reportData .block input[type=file] {
   border: 0;
   top: 0;
+  height: 2em;
 }
 
 #reportData .block input[type=button] {
