--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -104,6 +104,8 @@ body {
 
 .reportDataView .block:hover {
   cursor: pointer;
+  -moz-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
   transform: scale(1.5);
   border-color: #50add6; /* ab light blue */
   box-shadow: 0 1px 3px rgba(80, 173, 214, 0.5); /* RGB ab light blue */
