Test cubic bezier transition

--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -37,8 +37,8 @@ body {
   overflow: hidden;
   color: black;
   position: relative;
-  -webkit-transition: all 2s ease-in-out;
-  -moz-transition: all 2s ease-in-out;
+  -webkit-transition: all 5s cubic-bezier(.26, .10, 0, .91);
+  -moz-transition: all 5s cubic-bezier(.26, .10, 0, .91);
   /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
 }
 
