--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -109,8 +109,8 @@ body {
   transform: scale(1.5);
   z-index: 99;
   box-shadow: 0 1px 3px rgba(80, 173, 214, 0.5); /* RGB ab light blue */
-  -webkit-transition: all 5s ease-in-out;
-  -moz-transition: all 5s ease-in-out;
+  -webkit-transition-duration: 1s;
+  -moz-transition-duration: 1s;
   /* box-shadow: 0 1px 3px rgba(72, 111, 152, 0.3); /* RGB ab dark blue */
 }
 
