--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -1,9 +1,15 @@
 #if(!$report)
   #set($report = $sessionData.getReport())
 #end
+#set($ratio = "landscape")
 #set($table = $report.getParentTable())
 #set($internalTableName = $table.getInternalTableName())
 #set($reportBaseFields = $report.getReportBaseFields())##
+#foreach($reportBaseField in $reportBaseFields)
+  #if($reportBaseField.getAttachmentType() == "IMAGE")
+    #set($ratio = "portrait")
+  #end
+#end
 #set($reportRowLimit = 100) ## hard code for now
 #if(!$reportDataRows)
   #if(!$filters)
@@ -33,7 +39,7 @@
     #set($goToTable = $report.getParentTable())
     #set($goToRowId = $thisUniqueId)
     ##onclick is workaround for iOS bug http://blog.alanszlosek.com/post/4369588562/jquerys-live-click-handler-on-mobile-safari
-    <div class="related block current" href="AppController.servlet?return=gui/display_application&set_table=$goToTable.getInternalTableName()&set_row_id=$goToRowId" onclick=""> 
+    <div class="related block current $ratio" href="AppController.servlet?return=gui/display_application&set_table=$goToTable.getInternalTableName()&set_row_id=$goToRowId" onclick=""> 
       #foreach($field in $reportBaseFields)##
         #if(!$field.isPrimaryKey())
           #set($dataRowField = $dataRowFields.get($field))
@@ -45,7 +51,8 @@
             #set($fileValue = $viewTools.getFileValueTool($cell))
             #if($fileValue.isImage())
               #set($srcUrl = "/agileBase/uploads/$internalTableName/$field.getInternalFieldName()/$thisUniqueId/$fileValue.500.$fileValue.getExtension()")
-              <img src="$srcUrl" #if($field.getAttachmentType() == "PROFILE_PHOTO") class="profile_photo" #else class="image" onclick="bigImage(this);" #end/>
+              #set($targetUrl = "/agileBase/uploads/$internalTableName/$field.getInternalFieldName()/$thisUniqueId/$fileValue")
+              <a target = "_blank" href="AppController.servlet?return=gui/resources/image&set_custom_string=true&key=img_src&value=$targetUrl"><img src="$srcUrl" #if($field.getAttachmentType() == "PROFILE_PHOTO") class="profile_photo" #else class="image" #end/></a>
               #set($image = true)
             #end
           #end
