--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -42,6 +42,15 @@ body {
   /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
 }
 
+.reportDataView .block.landscape {
+  height: 150px;
+}
+
+.reportDataView .block.big {
+  height: 300px;
+  width: 500px;
+}
+
 .reportDataView .block.current {
   background: white;
 }
