Start of link to preview from toolbar

--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -46,15 +46,16 @@
       </script>  
     </head>
 	  <body #if($viewTools.getAppUrl().contains("gtwmbackup")) class="localhost" #end>
+    <div id="preview"></div>
     #set($noCaption = true)
-    <div id=toolbarDiv>
+    <div id="toolbarDiv">
       #parse("properties.vm") ## sets logo variable
       #if($logo)
         <div id="logo">
           <a href="http://www.agilebase.co.uk" target="_blank"><img src="$logo" border="0" /></a>
         </div>
       #end
-      <div class=buttonGroup> ## record actions
+      <div class="buttonGroup"> ## record actions
         #parse('gui/toolbar/buttons/new.vm')
         #parse('gui/toolbar/buttons/clone.vm')
         #parse('gui/toolbar/buttons/delete.vm')
@@ -78,6 +79,7 @@
       #if($apps.contains("dashboard"))
 		    #parse('gui/toolbar/buttons/dashboard.vm')
       #end
+      #parse('gui/toolbar/buttons/fullscreen.vm')
       #parse('gui/toolbar/buttons/apps.vm')
       #set($sessionContext = $sessionData.getContext().toString())
       #if($sessionContext == "SYSADMIN")
