Enable fullscreen button

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -115,6 +115,7 @@
          jqDoc.find('#button_import').removeAttr('disabled');
    	     jqDoc.find('#button_export').removeAttr('disabled');
    	     jqDoc.find('#button_print').removeAttr('disabled');
+         jqDoc.find('#button_fullscreen').removeAttr('disabled');
          jqDoc.find('#button_apps').removeAttr('disabled');
          jqDoc.find('#button_forms').removeAttr('disabled');
         </script>
