--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -7,7 +7,10 @@
   bottom: 0;
   overflow: scroll;
   display: none;
+  z-index: 2; /* above toolbar */
 }
+
+#pane1_id { display: none; }
 
 .reportDataView .block {
   margin: 2em;
