--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -6,6 +6,7 @@
 #set($internalTableName = $table.getInternalTableName())
 #set($reportBaseFields = $report.getReportBaseFields())##
 #foreach($reportBaseField in $reportBaseFields)
+  $reportBaseField is $reportBaseField.getAttachmentType()<br>
   #if($reportBaseField.getAttachmentType() == "IMAGE")
     #set($ratio = "portrait")
   #end
