--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_content.vm
@@ -39,7 +39,7 @@
     #set($goToTable = $report.getParentTable())
     #set($goToRowId = $thisUniqueId)
     ##onclick is workaround for iOS bug http://blog.alanszlosek.com/post/4369588562/jquerys-live-click-handler-on-mobile-safari
-    <div class="related block current $ratio" data-rowid="$thisUniqueId" href="AppController.servlet?return=gui/display_application&set_table=$goToTable.getInternalTableName()&set_row_id=$goToRowId" onclick="fLoadFromPreview(this);"> 
+    <div class="related block current $ratio" data-rowid="$thisUniqueId" href="AppController.servlet?return=gui/display_application&set_table=$goToTable.getInternalTableName()&set_row_id=$goToRowId" onclick="fLoadFromPreview(this,event);"> 
       #foreach($field in $reportBaseFields)##
         #if(!$field.isPrimaryKey())
           #set($dataRowField = $dataRowFields.get($field))
