--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -20,8 +20,8 @@
   overflow: hidden;
   color: black;
   position: relative;
-  -webkit-transition: all 10s ease-in-out;
-  -moz-transition: all 10s ease-in-out;
+  -webkit-transition: all 7s ease-in-out;
+  -moz-transition: all 7s ease-in-out;
   /* text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
   padding: 1em;
   border: solid 1px #b4b4b4;
@@ -108,6 +108,8 @@
   box-shadow: 0 1px 3px rgba(80, 173, 214, 0.5); /* RGB ab light blue */
   -webkit-transition-duration: 3s;
   -moz-transition-duration: 3s;
+  -moz-transition-timing-function: ease-out;
+  -webkit-transition-timing-function: ease-out;
   /* box-shadow: 0 1px 3px rgba(72, 111, 152, 0.3); /* RGB ab dark blue */
   -webkit-filter: grayscale(0);
   -moz-filter: grayscale(0);
