--- a/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/preview/report_including_content.vm
@@ -3,12 +3,14 @@
 #if(!$report)
   #set($report = $sessionData.getReport())
 #end
-  #set($filterString = $sessionData.getGlobalFilterString($report))
-  <div id="navrow">
+#set($filterString = $sessionData.getGlobalFilterString($report))
+<div id="navrow">
+  <div class="mini_action" style="border-bottom-right-radius: 0.5em; z-index: 100">
     <button id="close_preview" onclick="closePreview();">close</button>
-    #set($placeholder = $report.getReportName().replaceAll(" - .*",""))
-    <input id="searchbox" class="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
   </div>
-  <div class="reportDataView" id="homeContent">
-    #parse("gui/preview/report_content.vm")
-  </div>
+  #set($placeholder = $report.getReportName().replaceAll(" - .*",""))
+  <input id="searchbox" class="searchbox" name="searchbox" type="search" placeholder="search $placeholder" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
+</div>
+<div class="reportDataView" id="homeContent">
+  #parse("gui/preview/report_content.vm")
+</div>
