--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -154,3 +154,16 @@
 .row_count {
 	display: none;
 }
+
+.mini_action {
+  font-size: 8pt!important;
+  position: fixed;
+  padding: 0.5em;
+  background-color: #cccccc; /* f4f4f4 */
+  min-height: 1.95em;
+  font-weight: normal;
+  text-transform: lowercase;
+  top: 0;
+  opacity: 0.9;
+  z-index: 100;
+}
