Test IE 9 JS fix

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/image.vm
@@ -27,6 +27,9 @@ function zoom(zoomIn) {
 
 #image {
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
   -moz-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
   -ms-transition: all 0.5s ease-in-out;
