--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -826,6 +826,10 @@ div#reportData {
   border-radius: 0 0 0.5em 0.5em;
 }
 
+.selectorReport td {
+  cursor: pointer;
+}
+
 .tab_new_record {
   width: 100%;
   padding: 1em;
