Test position of 'new' button in tabs

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -824,6 +824,10 @@ div#reportData {
   display: inline;
 }
 
+.form_tabber .tab_choice.active img:hover {
+  background-color: #f0f0f0;
+}
+
 .selectorReport {
   max-height: 15em;
   overflow-x: hidden;
