--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -3,7 +3,7 @@
   #foreach($formTab in $formTabs)
     #set($formTable = $formTab.getTable())
     #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA",$formTable))
-      <div class="tab_choice" data-internaltablename="$formTable.getInternalTableName()">$formTab&nbsp;<img src="resources/toolbar/new.png" /></div>
+      <div class="tab_choice" data-internaltablename="$formTable.getInternalTableName()">$formTab&nbsp;<img class="new" src="resources/toolbar/new.png" title="add new $formTable.getSingularName()"/></div>
     #end
   #end
 </div>
