--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -840,7 +840,7 @@ div#reportData {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-.selectorReport td {
+.selectorReport table#reportData td {
   cursor: pointer;
 }
 
