--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
@@ -26,10 +26,12 @@
 #set($singleColumn = true) ## will be modified by table_data_row.vm
 #foreach($field in $fields)
   #if($field.getHidden() == false)
-    #if(!$firstField && !$field.equals($primaryKey))
-      #set($firstField = $field)
-    #end
-    #parse("gui/reports_and_tables/tabs/table_data_row.vm")
+		#if($parentTable && (!$field.getRelatedTable().equals($parentTable)))
+      #if(!$firstField && !$field.equals($primaryKey))
+        #set($firstField = $field)
+      #end
+      #parse("gui/reports_and_tables/tabs/table_data_row.vm")
+		#end
   #end
 #end
 #if(!$singleColumn)
