mini-action height

--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -160,7 +160,7 @@
   position: fixed;
   padding: 0.5em;
   background-color: #cccccc; /* f4f4f4 */
-  min-height: 1.95em;
+  height: 2.95em;
   font-weight: normal;
   text-transform: lowercase;
   top: 0;
