--- a/gtpb_clientside/resources/preview/edit_nav.css
+++ b/gtpb_clientside/resources/preview/edit_nav.css
@@ -31,6 +31,7 @@
   -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
   box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
   word-wrap: break-word;
+  line-height: 1.5em;
 }
 
 .reportDataView .block.landscape {
