--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -69,7 +69,7 @@
         #parse('gui/toolbar/buttons/filter.vm')
         #parse('gui/toolbar/buttons/print.vm')
         #parse('gui/toolbar/buttons/export.vm')
-				<input type="search" />
+				<input type="search" placeholder="fullscreen search"/>
       </div>
       <div class="buttonGroup" style="float:right; margin-left:0; margin-right: 90px"> ## external applications, built in and customised
         ## #parse('gui/toolbar/buttons/wiki.vm')
